fix bottom navbar problem on mobile screen yups

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2362,6 +2362,7 @@ p {
 .carousel-item {
   background-color: #2e8163;
   position: relative;
+  height: 99vh;
   height: calc(var(--vh, 1vh) * 100);}
   .carousel-item::before {
     position: absolute;
